# tp-opti

./: .gitignore  README.md  algorithms.py  main.py  notebook.py  pyproject.toml  utils.py  visualisation.py  vrptw_solver.ipynb
.ipynb_checkpoints/: vrptw_solver-checkpoint.ipynb
__marimo__/session/: notebook.py.json
data/tests/: eight.vrp  eight_max_capacity.vrp  square.vrp
notebooks/: benchmark.py  comparaison.py  crossover_operators.py  main.py  neightbor_operators.py  operators.py  vrptw_solver.ipynb
src/: notebook.py  parsing.py  visualisation.py
src/algorithms/: greedy.py  random.py
src/tp_opti/: model.py  visualisation.py
src/tp_opti/algorithms/: __init__.py  genetic.py  greedy.py  random.py  simulated_annealing.py
src/tp_opti/utils/: operators.py  validators.py
