[project]
name = "tp-opti"
version = "0.1.0"
description = "Vehicle Routing Probel with Time Windows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.23.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
]

[tool.marimo.runtime]
pythonpath = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
tp-opti = { workspace = true }

[dependency-groups]
dev = [
    "tp-opti",
]
